src/objects/Apttus_Config2__OrderRelatedLineItem__c.object
<CustomObject>
    <description>Holds the relationships between order line items</description>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>ID of the associated order line item</description>
        <inlineHelpText>ID of the associated order line item</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Related Line Items (To)</relationshipLabel>
        <relationshipName>RelatedLineItemsTo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedAssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related asset line item</description>
        <inlineHelpText>ID of the related asset line item</inlineHelpText>
        <label>Related Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Related Order Line Items</relationshipLabel>
        <relationshipName>RelatedOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedEndDate__c</fullName>
        <description>The end date associated with the related product/service</description>
        <inlineHelpText>The end date associated with the related product/service</inlineHelpText>
        <label>Related End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedExtendedPrice__c</fullName>
        <description>The related extended price is Quantity X Term X Related Base Price</description>
        <inlineHelpText>The related extended price is Quantity X Term X Related Base Price</inlineHelpText>
        <label>Related Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related order line item</description>
        <inlineHelpText>ID of the related order line item</inlineHelpText>
        <label>Related Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Related Line Items (From)</relationshipLabel>
        <relationshipName>RelatedLineItemsFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedQuantity__c</fullName>
        <description>The quantity associated with the related product/service</description>
        <inlineHelpText>The quantity associated with the related product/service</inlineHelpText>
        <label>Related Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedSellingTerm__c</fullName>
        <description>The selling term associated with the related product/service</description>
        <inlineHelpText>The selling term associated with the related product/service</inlineHelpText>
        <label>Related Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedStartDate__c</fullName>
        <description>The start date associated with the related product/service</description>
        <inlineHelpText>The start date associated with the related product/service</inlineHelpText>
        <label>Related Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationType__c</fullName>
        <description>The relation type</description>
        <inlineHelpText>The relation type</inlineHelpText>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                    <default>true</default>
                    <label>Service</label>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ServiceBasePrice__c</fullName>
        <description>The related or service base price computed based on the related asset or line item</description>
        <inlineHelpText>The related or service base price computed based on the related asset or line item</inlineHelpText>
        <label>Related/Service Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The application type</description>
        <inlineHelpText>The application type</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__WeightageAmount__c</fullName>
        <description>The weightage amount</description>
        <inlineHelpText>The weightage amount</inlineHelpText>
        <label>Weightage Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__WeightagePercent__c</fullName>
        <description>The effective weightage percent</description>
        <inlineHelpText>The effective weightage percent</inlineHelpText>
        <label>Weightage Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__WeightageType__c</fullName>
        <description>The weightage type</description>
        <inlineHelpText>The weightage type</inlineHelpText>
        <label>Weightage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__WeightedNetPrice__c</fullName>
        <description>The weighted net price</description>
        <inlineHelpText>The weighted net price</inlineHelpText>
        <label>Weighted Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Order Related Line Item</label>
    <nameField>
        <displayFormat>RLI-{0000000000}</displayFormat>
        <label>Related Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Related Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>